--- a/home/i3/config
+++ b/home/i3/config
@@ -147,7 +147,7 @@ for_window [class=TelegramDesktop] focus
 exec_always --no-startup-id picom -b
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id dex --autostart --environment i3
-exec --no-startup-id sleep 1 && feh --bg-fill ~/.config/i3/wallpaper.jpg
+exec --no-startup-id sleep 1 && feh --bg-fill ~/.config/i3/wallpaper.png
 exec --no-startup-id xset s 480 dpms 600 600 600
 exec --no-startup-id /usr/bin/dunst
 exec --no-startup-id blueberry-tray
