--- a/home/i3/i3blocks.conf
+++ b/home/i3/i3blocks.conf
@@ -41,9 +41,19 @@ label=
 command=~/.config/i3/scripts/temperature
 interval=30
 
+[net]
+label=
+command=echo "$(LANG=C nmcli d | grep connected  | awk '{print $4}')"
+interval=30
+
 [bandwidth]
 command=~/.config/i3/scripts/bandwidth2
 interval=persist
+
+[battery]
+command=~/.config/i3/scripts/battery2
+label=
+interval=30
 
 [simple-2]
 full_text=: :
@@ -82,4 +92,3 @@ command=~/.config/i3/scripts/powermenu
 [simple-2]
 full_text=: :
 color=#717171
-
