--- a/home/hyprland/hypr-conf/hyprland.conf
+++ b/home/hyprland/hypr-conf/hyprland.conf
@@ -11,15 +11,12 @@ input {
     kb_rules=
     follow_mouse=1
     natural_scroll=0
-	force_no_accel=0
+    force_no_accel=0
     numlock_by_default=1
 }
 
 # General 
 general {
-    sensitivity=2.0
-	apply_sens_to_raw=0
-
     gaps_in=5
     gaps_out=10
 
@@ -31,14 +28,9 @@ general {
 # Decoration
 decoration {
     rounding=8 
-    multisample_edges=0
     active_opacity=1.0
     inactive_opacity=0.9
     fullscreen_opacity=1.0
-    blur=0
-    blur_size=3
-    blur_passes=1
-    blur_ignore_opacity=0
 }
 
 # Animations
@@ -54,23 +46,6 @@ animations {
 dwindle {
     pseudotile=0
 }
-
-# Window Rules
-windowrule=float,foot-float
-windowrule=float,yad|nm-connection-editor|pavucontrolk
-windowrule=float,xfce-polkit|kvantummanager|qt5ct
-windowrule=float,feh|imv|Gpicview|Gimp|nomacs
-windowrule=float,VirtualBox Manager|qemu|Qemu-system-x86_64
-windowrule=float,xfce4-appfinder
-
-windowrule=float,foot-full
-windowrule=move 0 0,foot-full
-windowrule=size 100% 100%,foot-full
-
-windowrule=float,wlogout
-windowrule=move 0 0,wlogout
-windowrule=size 100% 100%,wlogout
-windowrule=animation slide,wlogout
 
 # Keybindings
 $term = alacritty
@@ -104,7 +79,7 @@ bind=SUPER,P,exec,$colorpicker
 bind=CTRLALT,L,exec,$lockscreen
 bind=SUPERSHIFT,X,exec,$wlogout
 
-# -- Some nice mouse binds --
+# -- Some nice mouse binds -
 bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
 
@@ -173,7 +148,6 @@ bind=SUPER,mouse_up,workspace,e-1
 # Startup
 exec-once=~/.config/hypr/scripts/startup
 
-windowrule=pseudo,fcitx
 exec-once=fcitx5-remote -r
 exec-once=fcitx5 -d --replace
 exec-once=fcitx5-remote -r
